--- a/views/profilePage.ejs
+++ b/views/profilePage.ejs
@@ -1,61 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css2?family=Unbounded:wght@400;500&display=swap" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Unbounded:wght@400;500&display=swap"
+      rel="stylesheet" />
     <link rel="stylesheet" href="/public/css/style.css" />
     <title>Профиль | ProCredit</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <%- include('blocks/header.ejs') %>
-        <main class="profilePage">
-            <h1 id="profile">Профиль</h1>
-            <div id="profileBox">
-                <form id="profile-box" method="post" action="'/main">
-                    <div class="userData">
-                      <div class="profilePersonalData">
-                        <p class="subHeading" id="contactInformationLabel">Личные данные</p>
-                        <p id="fio" class="dataCategory">ФИО</p>
-                        <input class="input profile-input unchanged" type="text" id="edited-fio" name="edited-fio" value='<%= surname %>' readonly>
-                        <p id="phoneNumber" class="dataCategory">Контактный номер</p>
-                        <input class="description profile-input unchanged" type="text" id="edited-phone-number" name="edited-phone-number" value="79012345678" readonly>
-                      </div>
-                      <div class="profileLoginData">
-                        <p class="subHeading" id="contactInformationLabel">
-                          Данные для входа
-                        </p>
-                        <p id="profileLogin" class="dataCategory">Логин</p>
-                        <input class="input profile-input unchanged" type="text" id="edited-login" name="edited-login" value="login" readonly>
-                        <p id="profilePassword" class="dataCategory">Пароль</p>
-                        <input
-                        class="input profile-input unchanged"
-                          id="edited-password"
-                          name="edited-password"
-                          type="password"
-                          value="qwerty"
-                          readonly />
-                      </div>
-                    </div>
-                    <div class="profileBoxButtons">
-                      <input type="submit" class="buttonType1" id="log-out" name="log-out" value="Выйти">
-                      <button class="buttonType1" id="edit-personal-information">
-                        Изменить
-                      </button>
-                      <input type="submit" class="buttonType1" id="delete-an-account" name="delete-an-account" value="Удалить аккаунт">
-                    </div>
-                  </form>
+    <main class="profilePage">
+      <h1 id="profile">Профиль</h1>
+      <div id="profileBox">
+        <form id="profile-box" method="post" action="'/main">
+          <div class="userData">
+            <div class="profilePersonalData">
+              <p class="subHeading" id="contactInformationLabel">
+                Личные данные <br />
+                <% surname %> <%= name %> <%= patronymic %>
+              </p>
+              <p id="fio" class="dataCategory">ФИО</p>
+              <input
+                class="input profile-input unchanged"
+                type="text"
+                id="edited-fio"
+                name="edited-fio"
+                value="<%= surname %> <%= name %> <%= patronymic %>"
+                readonly />
+              <p id="phoneNumber" class="dataCategory">Контактный номер</p>
+              <input
+                class="description profile-input unchanged"
+                type="text"
+                id="edited-phone-number"
+                name="edited-phone-number"
+                value="+<%= phone %>"
+                readonly />
             </div>
-        </main>
-        <footer class="footer">
-            <p id="author">Disigned by @perpetuumm0bi1e</p>
-            <p id="author">2023</p>
-        </footer>
-</body>
-
+            <div class="profileLoginData">
+              <p class="subHeading" id="contactInformationLabel">
+                Данные для входа
+              </p>
+              <p id="profileLogin" class="dataCategory">Логин</p>
+              <input
+                class="input profile-input unchanged"
+                type="text"
+                id="edited-login"
+                name="edited-login"
+                value="<%=login%>"
+                readonly />
+              <p id="profilePassword" class="dataCategory">Пароль</p>
+              <input
+                class="input profile-input unchanged"
+                id="edited-password"
+                name="edited-password"
+                type="password"
+                value="qwerty"
+                readonly />
+            </div>
+          </div>
+          <div class="profileBoxButtons">
+            <input
+              type="submit"
+              class="buttonType1"
+              id="log-out"
+              name="log-out"
+              value="Выйти" />
+            <button class="buttonType1" id="edit-personal-information">
+              Изменить
+            </button>
+            <input
+              type="submit"
+              class="buttonType1"
+              id="delete-an-account"
+              name="delete-an-account"
+              value="Удалить аккаунт" />
+          </div>
+        </form>
+      </div>
+    </main>
+    <footer class="footer">
+      <p id="author">Disigned by @perpetuumm0bi1e</p>
+      <p id="author">2023</p>
+    </footer>
+  </body>
 </html>
